# meeplemate

./: .devcontainer.json  README.md  docker-compose.yaml
code/: Makefile  README.md  app.py  config.py  create_dataset.ipynb  grader_test_cases.json  load_mistral_model.ipynb  pyproject.toml  quote_relevant_context.ipynb  requirements.txt  self_consistency.ipynb  self_consistency_rank.ipynb  self_consistency_test_cases.json  test.ipynb  test_cases.json  util.py  vllm_chat_model.ipynb
code/meeplemate/: cli.py  consistency.py  evaluation.py  llm_models.py  pdf.py  qa.py  question_generation.py  rag.py  retrievers.py  reword.py  similarity.py  tracer.py  util.py  vectorstores.py
code/notebooks/: self_consistency_rank.ipynb
code/scripts/: examples.txt  requirements.txt  start_llmserver.sh
services/jupyter/: Dockerfile  requirements.txt
